src/objects/Client_Training__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Trainings</relationshipLabel>
        <relationshipName>Client_Trainings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <picklist>
            <picklistValues>
                <fullName>Braille</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpentry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers - Indexing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driving Theory Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Work party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fabrics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklift Driving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hair Dressing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Related Fitness Fetac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horticulture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hurley Repairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indexing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kitchen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knitting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Creation_Date__c</fullName>
        <label>Legacy Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>A.I.S. Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BICS Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Institute of Cleaning Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C - D &amp; HGV License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cert - EN287 - Advanced T.I.G. and M.M.A. In pipe sheet metal and plate metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - ECDL - Typing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - Fetac Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - Introduction to welding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - Junior Trades - Fetac Level - Fas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City &amp; Guilds - Small Offset Printing - ECDL - Typing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.P.L. - Typing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECDL - Advanced E.C.D.L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECDL - Typequick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failte - EHB Hygiene Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failte - Leonardo - Essential Food Safety Skills</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS - Fetac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Fas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Leonardo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Leonardo - EHB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Leonardo - Hygiene Cert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Level 1 - Desk Top Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac - Level 1 - Leather Craft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetac Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I.A.S. Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Certification at present</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Client Training</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Trainings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>